2007-04-25  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.8

	* tests/test-pgp.c: Test exporting of keys.

	* gmime/gmime-utils.c (rfc2047_decode_word): Fixed compile
	warnings.

	* gmime/gmime-stream-file.c (stream_reset): Removed an unused
	variable.

	* gmime/gmime-charset.c (g_mime_charset_can_encode): 
	s/if (mask->level = 1)/if (mask->level == 1)/

2007-04-23  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.7

2007-04-14  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/*.c (g_mime_*_get_type): Set n_preallocs to 0.

2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/*.c: no need for a second NULL argument to g_object_new()

	* util/cache.c (cache_new): Change max_size and node_size to be of
	type size_t.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_new): g_object_new() doesn't need a
	second NULL argument.

	* gmime/gmime-utils.c (decode_8bit): Close the iconv descriptor
	and since we are using is_ascii() now, we don't need to use
	unsigned char *'s.

2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (decode_8bit): Use is_ascii().
	(g_mime_utils_header_decode_text): Same.
	(g_mime_utils_header_decode_phrase): Here too.

	* gmime/gen-table.c: Added a is_ascii() macro for use instead of
	the ctype isascii() so that I don't have to worry about casting.

2007-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	Revision 1119 (previous commit) made the following 2 functions
	even less attractive than they already were, so I decided to
	rewrite them especially since it wasn't hard to find a far cleaner
	approach.

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): Rewritten
	to be cleaner, faster, and more elegant.
	(g_mime_utils_header_decode_phrase): Same.

2007-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	Fixes for bug #423760 and bug #342196

	* gmime/gmime-charset.c (g_mime_charset_can_encode): New